# tcutils

./: .clang-format  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  DOXYGEN.sh  LICENSE  README.md  build.py  doxygen.cfg
.gitlab-ci/: ef_jobs.yml
include/tcutils/: Convert.h  FrameBoundary.h  Framerate.h  Timecode.h  TimecodeSamples.h  TimecodeSubframes.h  Types.h  Version.h
src/: Convert.cpp  DropFrameHelpers.h  FrameBoundary.cpp  Framerate.cpp  Timecode.cpp  TimecodeSamples.cpp  TimecodeSubframes.cpp  Version.cpp
test/: CMakeLists.txt  ConvertTests.cpp  EqualsProToolsTests.cpp  FrameBoundaryTests.cpp  FramerateTests.cpp  FullStressTest.h  TimecodeSamplesTests.cpp  TimecodeSubframesTests.cpp  TimecodeTests.cpp  VersionTest.cpp  main.cpp
utility/: CMakeLists.txt  main.cpp
